# routes/userRoutes.js
@@ -1,9 +1,9 @@
 const express = require('express');
 const router = express.Router();
-const {createUser,insertWallet, changePassword} = require('../controllers/userController');
+const {createUser,insertWallet, changePassword, generateTransactionPassword} = require('../controllers/userController');
 
 const validator = require('../middleware/joi.validator')
-const {CreateUser, ChangePassword} = require('../validators/userValidator');
+const {CreateUser, ChangePassword, generateTransactionPass} = require('../validators/userValidator');
 const { isAuthenticate } = require('../middleware/auth');
 
 
@@ -12,5 +12,6 @@ const { isAuthenticate } = require('../middleware/auth');
 router.post('/add',isAuthenticate,validator(CreateUser),createUser);
 router.post('/insert/wallet',insertWallet)
 router.post('/changePassword',isAuthenticate,validator(ChangePassword),changePassword);
+router.post("/generateTransactionPassword",isAuthenticate,validator(generateTransactionPass),generateTransactionPassword);
 
 module.exports = router;
